examples/invalid/variables8.cp
var what : boolean is -11;